Änderungen in der Vorlesung vom 2009-11-04
git-svn-id: https://svn.lug-jena.de/uni-skripte@2410 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -1,3 +1,4 @@
+
 % ToDo:
 %   + Es sollte Befehle für Klartext und Chiffretext geben, damit die Texte im
 %     gesamten Dokument gleich aussehen. z.\,B. \klartext=\texttt\uppercase
@@ -951,7 +952,7 @@ ein wirklich langer Geheimtext!
 Polyalphabetische Verschlüssung hat ebenfalls das Ziel, die Häufigkeit
 der Buchstaben zu verwischen. Ein prominentes Beispiel ist die
 \highl{Vigenère-Chiffre} von dem französischen Diplomat \textsc{Blaise
-  Vigenère} (16.~Jh.), die erst im 19.~Jahrhundert gebrochen wurde.
+  Vigenère} (1523--1596), die erst im 19.\,Jahrhundert gebrochen wurde.
 
 \begin{table}
   \centering
@@ -1006,18 +1007,18 @@ unterschiedlichen Häufigkeiten der Klartextbuchstaben im Geheimtext
 ausgeglichen.
 
 Die \highl[Verschlüsselung!polyalphabetische]{polyalphabetische Verschlüsselung} lässt sich allgemein auf
-folgenden Weise beschreiben: Es gibt ein Klartextalphabet~$X$,
-$d$~Geheimtextalphabete $Y_{0}, Y_{1}, \dotsc, Y_{d-1}$, $d$~bijektive
-Abbildungen $f_{i}\colon X \mapstoto Y_{i}$ ($i=0,\dotsc,d-1$) und eine
+folgenden Weise beschreiben: Es gibt ein Klartextalphabet~$\Sigma$,
+$d$~Geheimtextalphabete $\Gamma_{0}, \Gamma_{1}, \dotsc, \Gamma_{d-1}$, $d$~bijektive
+Abbildungen $f_{i}\colon \Sigma \mapstoto \Gamma_{i}$ ($i=0,\dotsc,d-1$) und eine
 surjektive Abbildung $h\colon\N\mapsto \{0,1,\dotsc,d-1\}$. Den Schlüssel
 bilden dabei $h, f_{0}, f_{1}, \dotsc, f_{d-1}$.
 
-Ein Klartext $m=m_{1}m_{2}\dotso m_{t}$ ($m_{j}\in X$) der Länge~$t$ wird in
+Ein Klartext $m=m_{1}m_{2}\dotso m_{t}$ mit $m_{j}\in \Sigma$ der Länge~$t$ wird in
 einen Geheimtext $c=c_{1}c_{2}\dotso c_{t}$ durch $c_{j} = f_{h(j)}(m_{j})$
 für $1\leq j\leq t$ überführt.
 
-Bei der \highl{Vigenère-Chiffre} sind die Alphabete identisch;
-$X=Y_{0}=\dotsb= Y_{d} =\{0,1,\dotsc,25\}$. Das Schlüsselwort
+Bei der \highl{Vigenère-Chiffre} sind die Alphabete identisch, also
+$\Sigma=\Gamma_{0}=\dotsb= \Gamma_{d} =\{0,1,\dotsc,25\}$. Das Schlüsselwort
 $k=k_{0}k_{1}\dotso k_{d}$ der Länge~$d$ beschreibt die einzelnen
 Verschlüsselungsfunktionen durch eine Verschiebechiffre $f_{i}(a) = a+
 k_{i}\bmod{n}$ (für $a\in X$). Als Funktion~$h$ wird einfach $h(x) = x\bmod{d}$
