--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -58,6 +58,7 @@
 \usepackage{braket}
 \usepackage{tikz}
 \usepackage{xypic}
+\usepackage{wasysym}
 
 % nach dem Theoremkopf wird ein Zeilenumbruch eingefügt, die Schrift des
 % Körpers ist normal und der Kopf wird fett gesetzt
@@ -2755,9 +2756,70 @@ $z$ ist aus $m$ konstruierbar $\Leftrightarrow \exists$ Folge von Teilkörpern
 \label{chap:uebung}
 
 \section{Übungsblatt 1}
-
+\setcounter{enumi}{5}
 \begin{enumerate}
+\item Seien $a,n\in\N$ mit $n\geq 2$. Zeigen Sie: $a^{n}-1\in
+  \PZ\Rightarrow a=2\wedge n\in\PZ$. Wie sieht es mit der Umkehrung
+  aus?\\
+  Sei $a\neq2$ und $n\notin\PZ$. Dann ist $a^{n}-1\notin\PZ$.
+  \begin{enumerate}[1.\,F{a}ll]
+  \item Sei $a\neq2$. Für $a=1$ gilt: $a^{n}-1=0\notin\PZ$. Für
+    $a\geq3$ ist $(a-1)(a^{n-1}+a^{n-2}+\dotsb +a+1)= a^{n}-1$. Damit
+    gilt $a-1\mid a^{n}-1$. Also ist die Zahl keine Primzahl.
+  \item Sei $n\in\PZ$. Dann ist $n=bc$ für $b,c\geq2$. Somit ergibt
+    sich die Darstellung $a^{n}-1=(a^{b})^{c}-1$. Da $b\geq 2$, ist
+    $a^{b}\neq2$ und wir können den ersten Fall anwenden.
+  \end{enumerate}
+  Die Umkehrung gilt nicht, denn für $a=2$ und $n=11$ gelten die
+  Voraussetzungen. Aber $2^{11}-1=2047=89\cdot23$.
+\item   Zeigen Sie, dass es unendlich viele Primzahlen der Form $4n+1$ und
+  unendlich viele Primzahlen der Form $4n+3$ mit $n\in\N$ gibt.\\
+  Wir nehmen an, dass die Zahlen $p_{1},\dotsc,p_{n}$ die einzigen
+  Primzahlen der Form $4m+3$ mit $m\in\N$ sind. Wegen $p_{1}=3$ ist
+  $a\coloneqq4p_{1}\cdot\dotsc\cdot p_{n}\geq2$. Sei nun
+  $a=q_{1}-q_{k}$ die Primfaktorzerlegung von $a$. Wäre
+  $q_{i}\equiv1\pmod{4}$ für $i=1,\dotsc,k$, so wäre auch
+  $a\equiv1\pmod{4}$. Also gilt $q_{i}\equiv3\pmod{4}$ für ein
+  $i\in\{1,\dotsc,k\}$. Nach der Annahme ist dann $q_{i}=p_{j}$ für
+  ein $j\in\{1,\dotsc,n\}$. Dann gilt:
+  $q_{i}\mid4p_{1}\cdot\dotsc\cdot -a=1$. \lightning{}
+
+  Für den zweiten Teil nehmen wir wieder an, dass $p_{1},\dotsc,p_{n}$
+  die einzigen Primzahlen der Form $4m+1$ sind. Sei $p$ ein Primteiler
+  $(2p_{1}\cdot\dotsc\cdotp_{n})^{2}$,
+  d.\,h. $(2p_{1}\cdot\dotsc\cdotp_{n})^{2}\equiv -1 \pmod{p}$. Nach
+  dem Satz von \textsc{Euler}"=\textsc{Fermat} (\autoref{satz:3.8})
+  ist
+  $1\equiv(2p_{1}\cdot\dotsc\cdotp_{n})^{p-1}\equiv(-1)^{\frac{p-1}{2}}\pmod{p}$. Im
+  Fall $p\equiv3\pmod{4}$ wäre $(-1)^{\frac{p-1}{2}}=-1$ und damit
+  $p\mid2$.\lightning{} Somit hat $p$ die Form $4m+1$. Wegen
+  $p\mid(2p_{1}\cdot\dotsc\cdotp_{n})$  ergibt sich der Widerspruch $p\mid1$.
 \item 
+  \begin{enumerate}[(i)]
+  \item Zeigen Sie, dass für $a,b,n\in\N$ gilt: $\ggt(n^{a}-1,
+    n^{b}-1)= n^{\ggt(a,b)}-1$.\\
+    Sei \OE{} $a<b$. Für den Spezialfall $n=1$ ist
+    $\ggt(0,0)=0$. Daher ist ab jetzt $a>1$ und wir führen eine
+    Induktion nach $a=\min(a,b)$ durch. Für den Induktionsanfang ist
+    $a=1$ und $n-1\mid n^{b}-1$. Dann ist $\ggt(n-1, n^{b}-1)=
+    n-1$. Für den Induktionsschluss liefert die Division mit Rest
+    $b=aq+r$ mit $q\in\N$ und $0\leq r<a$. Wegen $n^{b}-1=
+    n^{r}((n^{a}-1)+1)^{q}-1\equiv n^{r}-1\pmod{n^{a}-1}$  existiert
+    eine Zahl $s\in\Z$ mit $n^{b}-1= s(n^{a}-1)+(n^{r}-1)$. Dann ist
+    $\ggt(n^{a}-1, n^{b}-1)= \ggt(n^{a}-1, s(n^{a}-1)+(n^{r}-1))=
+    \ggt(n^{a}-1, n^{r}-1)= n^{\ggt(a,r)}-1= n^{\ggt(a,aq+r)}-1= n^{\ggt(a,b)}-1$
+  \item Zeigen Sie, dass für $n\geq2$ gilt: $1+\frac{1}{2}+
+    \frac{1}{3}+\dotsc+ \frac{1}{n}\notin\N$.\\
+    Sei $k_{n}\coloneqq\kgv(1,\dotsc,n)$. Dann ist $k_{n}$ gerade und
+    $k_{n} \sum_{j=1}^{n} \frac{1}{j}= \sum_{j=1}^{n}
+    \frac{k_{n}}{j}\in\N$. Sei $2^{s}$ die größte Zweierpotenz mit
+    $2^{s}\leq n$. Dann ist $\frac{k_{n}}{2^{s}}$ ungerade. Für
+    $m\in\{1,\dotsc,n\}\setminus\{2^{s}\}$ ist $\frac{k_{n}}{m}$
+    gerade. Also ist $\sum_{j=1}^{n} \frac{k_{n}}{j}$ ungerade. Da
+    $k_{n}$ gerade ist, kann die Summe $\sum_{j=1}^{n} \frac{1}{j}=
+    \frac{k_{n} \sum_{j=1}^{n} \frac{1}{j}}{k_{n}}$ keine natürliche
+    Zahl sein.
+  \end{enumerate}
 \end{enumerate}
 
 \begin{thebibliography}{99}
