Schreibweise von Bld korrigiert
Der Operator Bld war im Text fast überall ohne "\", korrigiert.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2419 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -2215,8 +2215,8 @@ Sei $L\mid K$ Körpererweiterung und $b \in L$ algebraisch über $K$ mit
   \end{align*}
   und $f(1) = 1$ ist $f$ ein Körperhomomorphismus.
   
-Wegen $K[X]/\mu = \Set{a_0 + a_1X + \dotsc + a_{n-1}X^{n-1} + (\mu) | a_0, \ldots, a_{n-1} \in K}$ ist $\Bld(f) = \Set{a_0 + a_1b + \dotsc + a_{n-1}b^{n-1} | a_0, \ldots, a_{n-1} \in K} \subseteq L$ Teilkörper. Wegen $K \subseteq Bld(f)$ und $b \in Bld(f)$ ist $K(b) \subseteq Bld(f)$.\\
-Andererseits ist $Bld(f)$ in jedem Teilkörper von $L$ enthalten, der $K$ und $b$ enthält. Also ist $Bld(f) \subseteq K(b) \Rightarrow Bld(f) = K(b)$.\\
+Wegen $K[X]/\mu = \Set{a_0 + a_1X + \dotsc + a_{n-1}X^{n-1} + (\mu) | a_0, \ldots, a_{n-1} \in K}$ ist $\Bld(f) = \Set{a_0 + a_1b + \dotsc + a_{n-1}b^{n-1} | a_0, \ldots, a_{n-1} \in K} \subseteq L$ Teilkörper. Wegen $K \subseteq \Bld(f)$ und $b \in \Bld(f)$ ist $K(b) \subseteq \Bld(f)$.\\
+Andererseits ist $\Bld(f)$ in jedem Teilkörper von $L$ enthalten, der $K$ und $b$ enthält. Also ist $\Bld(f) \subseteq K(b) \Rightarrow \Bld(f) = K(b)$.\\
 Also ist $f$ Körperhomomorphismus.\\
 Offenbar ist $f$ auch $K$-linear. Daher: \[[K(b)\colon K] = \dim_k K(b) = \dim_k K[X] / (\mu) = \deg{\mu}\].
 \end{beweis}
@@ -3013,7 +3013,7 @@ Für $n \in \N$ und jeden Körper $K$ ist $det\colon \GL(n, K)\mapsto K\setminus \
 \begin{satz}\label{satz:10.3}
 Für jeden Homomorphismus von Gruppen $f\colon G\mapsto H$ gilt:
 \begin{enumerate}[(i)]
-	\item $U \leq G \Rightarrow f(U) \leq H$; insbesondere ist $Bld(f) = f(g) \leq H$
+	\item $U \leq G \Rightarrow f(U) \leq H$; insbesondere ist $\Bld(f) = f(g) \leq H$
 	\item $U \unlhd G \Rightarrow f(U) \unlhd f(G)$; aber nicht unbedingt $f(U) \unlhd H$
 	\item $V \leq H \Rightarrow f^{-1}(V) \leq G$
 	\item $V \unlhd H \Rightarrow f^{-1}(V) \unlhd G$
@@ -3046,7 +3046,7 @@ Daher ist eine Untergruppe $N$ einer Gruppe $G$ genau dann normal in $G$, wenn e
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:10.4}
 Für jeden Homomorphismus von Gruppen $f\colon G\mapsto H$ ist die Abbildung
-\[\{U\colon Ker(f) \leq U \leq G\} \mapsto \{V\colon V \leq Bld(f)\}, \quad U\mapsto f(U),\]
+\[\{U\colon Ker(f) \leq U \leq G\} \mapsto \{V\colon V \leq \Bld(f)\}, \quad U\mapsto f(U),\]
 bijektiv mit Umkehrabbildung $V\mapsto f^{-1}(V)$
 \end{satz}
 
@@ -3054,14 +3054,14 @@ bijektiv mit Umkehrabbildung $V\mapsto f^{-1}(V)$
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Für $U \leq G$ mit $Ker(f) \leq U$ ist $f(U) \leq f(G) = Bld(f)$, und für $V \leq Bld(f)$, ist $f^{-1}(V) \leq G$ mit $Ker(f) = f^{-1}(\{1_H\}) \subseteq f^{-1}(V)$.\\
+Für $U \leq G$ mit $Ker(f) \leq U$ ist $f(U) \leq f(G) = \Bld(f)$, und für $V \leq \Bld(f)$, ist $f^{-1}(V) \leq G$ mit $Ker(f) = f^{-1}(\{1_H\}) \subseteq f^{-1}(V)$.\\
 Noch zu zeigen: $f^{-1}(f(U)) = U$ und $f(f^{-1}(V)) = V$.\\
 Für $x \in f^{-1}(f(U))$ ist $f(x) \in f(U)$, d.\,h. $f(x) = f(u)$ für ein $u \in U$.\\
 Dann: $f(x^{-1}u) = f(x^{-1})f(u) = 1$, d.\,h. $x^{-1}u \in Ker(f) \leq U$ und $x^{-1}, x \in U$.\\
 Also: $f^{-1}(f(U)) \subseteq U$.
 Sicher ist $U \subseteq f^{-1}(f(U))$.\\
 Sicher ist $f(f^{-1}(V)) \subseteq V$.\\
-Sei $v \in V \leq Bld(f)$.
+Sei $v \in V \leq \Bld(f)$.
 Schreibe $v = f(y) \in f(f^{-1}(V))$.\\
 Also: $V \subseteq f(f^{-1}(V))$.
 \end{beweis}
@@ -3097,9 +3097,9 @@ Daher gilt: $\GL(V) \cong \GL(n, K)$.
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}[Homomorphiesatz]\label{satz:10.5}
 Für jeden Homomorphismus von Gruppen $f\colon G\mapsto H$ ist
-\[F\colon G/Ker(f)\mapsto Bld(f), \quad aKer(f)\mapsto f(a),\]
+\[F\colon G/Ker(f)\mapsto \Bld(f), \quad aKer(f)\mapsto f(a),\]
 ein Isomorphismus.\\
-Insbesondere gilt: $G/Ker(f) \cong Bld(f)$.
+Insbesondere gilt: $G/Ker(f) \cong \Bld(f)$.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -3141,7 +3141,7 @@ Für $n \in N$ und jedem Körper $K$ folgt aus dem Homomorphiesatz:
 	Man nenn $Z(G)$ das \highl[Gruppe!Zentrum]{Zentrum}\index{Zentrum} von $G$.
 	Stets ist $Z(G) \unlhd G$.
 	
-	\item Wir setzen $Inn(G) \coloneqq Bld(F) = \{f_x\colon x \in G\}$.\\
+	\item Wir setzen $Inn(G) \coloneqq \Bld(F) = \{f_x\colon x \in G\}$.\\
 	Aus dem Homomorphiesatz (\autoref{satz:10.5}) folgt:
 	\[G/Z(G) \cong Inn(G).\]
 	Dabei ist $Inn(G) \unlhd \Aut(G)$; denn für $x, a \in G$, $\alpha \in \Aut(G)$ folgt:
@@ -3188,7 +3188,7 @@ f(u_1)f(u_2) & = & (u_1N)(u_2N)\\
 Für $u \in U$ gilt dabei: $\begin{array}{lcl}f(u) = 1 & \Leftrightarrow & uN = N\\ & \Leftrightarrow & u \in N\end{array}$.
 Daher ist $Ker(f) = U \cap N$.\\
 Insbesondere ist $U \cap N \unlhd U$.\\
-Ferner ist $Bld(f) = \{uN\colon u \in U\} = \{unN\colon u \in U, \quad n \in N\} = UN/N$.\\
+Ferner ist $\Bld(f) = \{uN\colon u \in U\} = \{unN\colon u \in U, \quad n \in N\} = UN/N$.\\
 Jetzt folgt alles aus dem Homomorphiesatz (\autoref{satz:10.5}).
 \end{beweis}
 
