--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -2492,14 +2492,14 @@ Dabei:
 	\item Codierung: injektive Abbildung\\
 	$\underbrace{E}_{\text{Encode}} \colon K^k \rightarrow K^n\ (n > k)$  [oft: $E$ linear]
 	\item Decodierung: $D \colon K^n \rightarrow K^k$ mit $D \circ E =\id_{K^k}$
-	\item Hilfreich \highl{Hamming--Abstand} \footnote{\textsc{Hamming}: Pionier der Codierungstheorie} $d \colon K^n \times K^n \rightarrow \R$ \footnote{$d$ Metrik}
+	\item Hilfreich \highl{Hamming"=Abstand} \footnote{\textsc{Hamming}: Pionier der Codierungstheorie} $d \colon K^n \times K^n \rightarrow \R$ \footnote{$d$ Metrik}
 	\[d(x, y) \coloneqq \abs{\Set{i | 1 \leq i \leq n, x_i \neq y_i}} \text{ für } x = (x_1, \ldots, x_n), (y_1, \ldots, y_n) \in K^n\] misst Anzahl der Fehler:
 	\begin{itemize}
 		\item $d(x, y) \geq 0$, $d(x, y) = 0 \Leftrightarrow x = y$
 		\item $d(x, y) = d(y, x)$
 		\item $d(x, z) \leq d(x, y) + d(y, z)$ (Dreiecksungleichung)
 	\end{itemize}
-	\item \highl{Hamming--Gewicht}: $w \colon K^n \rightarrow \R$,
+	\item \highl{Hamming"=Gewicht}: $w \colon K^n \rightarrow \R$,
 	\[w(x) = \abs{\Set{i | 1 \leq i \leq n, x_i \neq 0}} \text{ für } x = (x_1, \ldots, x_n) \in K^n\]
 	Dann: $d(x, y) = w(x - y)$
 \end{itemize}
@@ -2508,7 +2508,7 @@ Dabei:
 \begin{defi}\label{defi:8.1}
 Ein (linearer) Code der Länge $n$ ist ein Untervektorraum $C \subseteq K^n$. Man nennt $k \coloneqq \dim C$ die Dimension von $C$. Außerdem heißt
 \[\delta \coloneqq \min{\Set{d(x, y) | x, y \in C, x \neq y}} = \min{\Set{w(z) | 0 \neq z \in C}}\]
-\highl{Minimalabstand} (\highl{Minimalgewicht}) von $C$. Man spricht dann auch von einem $[n, k, \delta]$--Code.
+\highl{Minimalabstand} (\highl{Minimalgewicht}) von $C$. Man spricht dann auch von einem $[n, k, \delta]$"=Code.
 \end{defi}
 
 \emph{Idee:} $C$ ist das Bild von $E \colon K^k \rightarrow K^n$. Ist $e \in E$ mit $2e < \delta$ so kann $C$ mindestens $e$ Fehler korrigieren. (Kreise von Radius $e$ um Codewörter schneiden sich nicht.)
@@ -2607,8 +2607,8 @@ Die Golay-Codes sind sowohl für die Theorie als auch für die Praxis von großer B
 	Zu einem gegebenen Würfel konstruiere man einen Würfel mit doppeltem Volumen.
 	\item Winkeldreiteilung\\
 	Man gebe ein Verfahren an, mit dem man beliebige Winkel in 3 gleiche Teile teilen kann.
-	\item Konstruktion regelmäßiger n--Ecke\\
-	Für $n = 3, 4, 5, 6, \ldots$ konstruiere man nur mit Zikel und Lineal ein regelmäßiges n--Eck.
+	\item Konstruktion regelmäßiger $n$"=Ecke\\
+	Für $n = 3, 4, 5, 6, \ldots$ konstruiere man nur mit Zikel und Lineal ein regelmäßiges $n$"=Eck.
 \end{enumerate}
 \end{bem}
 
