Abstände bei Operationen verkürzt
Bei Hr. Kuelshammer ist ^{g}a das Zeichen für Operation. Im Normalfall
ist der Abstand nach dem Supscript zu weit. Daher habe ich den Abstand
zwischen dem Supscript und dem folgenden Zeichen durch "\!" verkürzt.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2425 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -4996,11 +4996,15 @@ Daher ist $\underbrace{\Gamma(G)}_{\cong G} = \Sym(5)$.
 % Definition 15.1
 %%%%%%%%%%%%%%%%%%%
 \begin{defi}\label{defi:15.1}
-Eine \highl{Gruppe!Operation}{Operation (action)}\index{Operation} einer Gruppe $G$ auf eine Menge $\Omega$ ist eine Abbildung $G\times\Omega\mapsto\Omega$, $(g,\alpha)\mapsto {}^g\alpha$, mit den folgenden Eigenschaften:
+Eine \highl[Gruppe!Operation]{Operation (action)}\index{Operation}
+einer Gruppe $G$ auf eine Menge $\Omega$ ist eine Abbildung
+$G\times\Omega\rightarrow\Omega$ mit $(g,\alpha)\mapsto
+{}^{g}\!\alpha$, mit den folgenden Eigenschaften: 
 
 \begin{enumerate}[(i)]
-	\item ${}^1\alpha = \alpha$ für alle $\alpha\in\Omega$
-	\item ${}^g({}^h\alpha) = {}^{gh}\alpha$ für alle $\alpha \in \Omega, g,h \in G$
+\item ${}^1\!\alpha = \alpha$ für alle $\alpha\in\Omega$
+\item ${}^g\!({}^h\!\alpha) = {}^{gh}\!\alpha$ für alle $\alpha \in
+  \Omega, g,h \in G$ 
 \end{enumerate}
 Man sagt auch: "`$G$ operiert auf $\Omega$"' oder "`$\Omega$ ist eine $G$-Menge"'.
 \end{defi}
@@ -5011,7 +5015,7 @@ Man sagt auch: "`$G$ operiert auf $\Omega$"' oder "`$\Omega$ ist eine $G$-Menge"
 \begin{satz}\label{satz:15.1}
 Seien $G$ eine Gruppe und $\Omega$ eine $G$-Menge.
 Für $g\in G$ ist dann
-\[\tau_g\colon\Omega\mapsto\Omega, \alpha\mapsto {}^g\alpha,\]
+\[\tau_g\colon\Omega\mapsto\Omega, \alpha\mapsto {}^g\!\alpha,\]
 bijektiv, d.\,h. $\tau_g\in\Sym(\Omega)$.
 Außerdem ist die Abbildung
 \[\tau\colon G\mapsto\Sym(\Omega), g\mapsto\tau_g,\]
@@ -5022,7 +5026,10 @@ ein Homomorphismus.
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Für $g,h\in G$, $\alpha\in\Omega$ ist $(\tau_g\circ\tau_h)(\alpha) = {}^g({}^h\alpha) = {}^{gh}\alpha = \tau_{gh}(\alpha)$ und $\tau_1(\alpha) = {}^1\alpha = 1$, d.\,h. $\tau_g\circ\tau_h=\tau_{gh}$ und $\tau_1=id_{\Omega}$.
+Für $g,h\in G$, $\alpha\in\Omega$ ist $(\tau_g\circ\tau_h)(\alpha) =
+{}^g\!({}^h\!\alpha) = {}^{gh}\!\alpha = \tau_{gh}(\alpha)$ und
+$\tau_1(\alpha) = {}^1\1\alpha = 1$,
+d.\,h. $\tau_g\circ\tau_h=\tau_{gh}$ und $\tau_1=id_{\Omega}$.
 Daher ist $\tau_g$ bijektiv.
 Die Behauptung folgt.
 \end{beweis}
@@ -5033,7 +5040,7 @@ Die Behauptung folgt.
 \begin{satz}\label{satz:15.2}
 Seien $G$ eine Gruppe, $\Omega$ eine Menge und $\tau\colon G\mapsto\Sym(\Omega)$ ein Homomorphismus.\\
 Dann erhält man durch
-\[{}^g\alpha\coloneqq(\tau(g))(\alpha) \qquad \text{ für } g\in G,\alpha\in\Omega\]
+\[{}^g\!\alpha\coloneqq(\tau(g))(\alpha) \qquad \text{ für } g\in G,\alpha\in\Omega\]
 eine Operation von $G$ auf $\Omega$.
 \end{satz}
 
@@ -5043,10 +5050,10 @@ eine Operation von $G$ auf $\Omega$.
 \begin{beweis}
 Da $\tau$ ein Homomorphismus ist, gilt für alle $g,h\in G$, $\alpha\in\Omega$:
 \[\begin{array}{lcl}
-{}^g({}^h\alpha) & = & \tau(g)[(\tau(h))(\alpha)]\\
+{}^g\!({}^h\!\alpha) & = & \tau(g)[(\tau(h))(\alpha)]\\
 & = & [\tau(g)\circ\tau(h)](\alpha)\\
-& = & [\tau(gh)](\alpha) = {}^{gh}\alpha\\
-{}^1\alpha & = & (\tau(1))(\alpha) = id_{\Omega}(\alpha) = \alpha
+& = & [\tau(gh)](\alpha) = {}^{gh}\!\alpha\\
+{}^1\!\alpha & = & (\tau(1))(\alpha) = id_{\Omega}(\alpha) = \alpha
 \end{array}\]
 \end{beweis}
 
@@ -5062,7 +5069,7 @@ Die Sätze \autoref{satz:15.1} und \autoref{satz:15.2} zeigen, dass Gruppenoperat
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:15.1}
 Für jede Menge $\Omega$ operiert jede Untergruppe $G$ von $\Sym(\Omega)$ auf $\Omega$ durch
-\[{}^g\alpha\coloneqq g(\alpha) \qquad \text{ für } g\in G, \alpha\in\Omega.\]
+\[{}^g\!\alpha\coloneqq g(\alpha) \qquad \text{ für } g\in G, \alpha\in\Omega.\]
 (Dies ist der Spezialfall $\tau\colon G\mapsto\Sym(\Omega), g\mapsto g$.)
 \end{bsp}
 
@@ -5072,10 +5079,10 @@ Für jede Menge $\Omega$ operiert jede Untergruppe $G$ von $\Sym(\Omega)$ auf $\O
 \begin{defi}\label{defi:15.2}
 Sei $\Omega$ eine $G$-Menge und $\tau\colon G\mapsto\Sym(\Omega)$ der entsprechende Homomorphismus.
 Dann heißt:
-\[\Ker(\tau) = \Set{g\in G | \tau_g=id_{\Omega}} = \Set{g\in G | {}^g\alpha=\alpha  \qquad  \text{ für alle } \alpha\in\Omega}\]
+\[\Ker(\tau) = \Set{g\in G | \tau_g=id_{\Omega}} = \Set{g\in G | {}^g\!\alpha=\alpha  \qquad  \text{ für alle } \alpha\in\Omega}\]
 der \highl{Gruppe!Operation!Kern}{Kern} der Operation.
 
-Ist $\Ker(\tau) = G$ [d.\,h. ${}^g\alpha=\alpha$ für alle $g\in G$, $x\in\Omega$], so nennt man die Operation \highl{Gruppe!Operation!trivial}{trivial}.
+Ist $\Ker(\tau) = G$ [d.\,h. ${}^g\!\alpha=\alpha$ für alle $g\in G$, $x\in\Omega$], so nennt man die Operation \highl{Gruppe!Operation!trivial}{trivial}.
 Man sagt: "`$G$ operiert trivial auf $\Omega$"'.
 
 Ist dagegen $\Ker(\tau) = \{1\}$ [d.\,h. $\tau$ ist injektiv], so nennt man die Operation \highl{Gruppe!Operation!treu}{treu}.
@@ -5093,7 +5100,7 @@ Jede Gruppe $G$ ist zu eine Untergruppe einer symmetrischen Gruppe isomorph.
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-$G$ operiert auf sich selbst durch Multiplikation: ${}^gx\coloneqq g\cdot x$ $(g,x\in G)$.
+$G$ operiert auf sich selbst durch Multiplikation: ${}^g\!x\coloneqq g\cdot x$ $(g,x\in G)$.
 Diese Operation ist treu, denn aus $gx = x$ für alle $x\in G$ folgt $g = 1$.\\
 Also: $G \cong \tau(G) \leq\Sym(G)$.
 \end{beweis}
@@ -5104,7 +5111,7 @@ Also: $G \cong \tau(G) \leq\Sym(G)$.
 \begin{satz}\label{satz:15.4}
 Seien $G$ eine Gruppe und $\Omega$ eine $G$-Menge.\\
 Wir definieren eine Relation $\sim$ auf $\Omega$ durch
-\[\alpha\sim\beta :\Leftrightarrow\exists g\in G\colon {}^g\alpha = \beta.\]
+\[\alpha\sim\beta :\Leftrightarrow\exists g\in G\colon {}^g\!\alpha = \beta.\]
 Dann ist $\sim$ eine Äquivalenzrelation.
 \end{satz}
 
@@ -5113,9 +5120,12 @@ Dann ist $\sim$ eine Äquivalenzrelation.
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
 \begin{itemize}
-\item[Reflexivität] ${}^1\alpha = \alpha$
-\item[Symmetrie] $\alpha\sim\beta\Rightarrow\exists g\in G\colon {}^g\alpha=\beta\Rightarrow g^{-1}\in G$ und $g^{-1}\beta = {}^{g^{-1}}({}^g\alpha) = {}^{g^{-1}g}\alpha=\alpha$, d.\,h. $\beta\sim\alpha$
-\item[Transitivität] $\alpha\sim\beta\wedge\beta\sim\gamma\Rightarrow\exists g,h\in G\colon {}^g\alpha=\beta\wedge {}^h\beta=\gamma \Rightarrow h\cdot g\in G\wedge {}^{hg}\alpha = {}^h\beta=\gamma\Rightarrow\alpha\sim\beta$.
+\item[Reflexivität] ${}^1\!\alpha = \alpha$
+\item[Symmetrie] $\alpha\sim\beta\Rightarrow\exists g\in G\colon
+  {}^g\!\alpha=\beta\Rightarrow g^{-1}\in G$ und $g^{-1}\beta =
+  {}^{g^{-1}}\!({}^g\!\alpha) = {}^{g^{-1}g}\!\alpha=\alpha$,
+  d.\,h. $\beta\sim\alpha$
+\item[Transitivität] $\alpha\sim\beta\wedge\beta\sim\gamma\Rightarrow\exists g,h\in G\colon {}^g\!\alpha=\beta\wedge {}^h\!\beta=\gamma \Rightarrow h\cdot g\in G\wedge {}^{hg}\!\alpha = {}^h\!\beta=\gamma\Rightarrow\alpha\sim\beta$.
 \end{itemize}
 \end{beweis}
 
@@ -5126,7 +5136,7 @@ Dann ist $\sim$ eine Äquivalenzrelation.
 \begin{enumerate}[(i)]
 	\item Für $\alpha\in\Omega$ ist also
 	\[\Orb_G(\alpha)=\Set{\beta\in\Omega | \alpha\sim\beta} =
-        \Set{{}^g\alpha | g\in G}\]
+        \Set{{}^g\!\alpha | g\in G}\]
 	die Äquivalenzklasse von $\alpha$ bezüglich $\sim$.\\
 	$\Orb_G(\alpha)$ heißt \highl{Gruppe!Bahn}{Bahn} von $\alpha$ unter $G$ (\highl{Gruppe!Orbit}{Orbit}).
 	
@@ -5144,7 +5154,7 @@ Dann ist $\sim$ eine Äquivalenzrelation.
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:15.5}
 Für jede Gruppe $G$, jede $G$-Menge $\Omega$ und jedes $\alpha\in\Omega$ ist
-\[\Stb_G(\alpha)\coloneqq G_{\alpha}\coloneqq\Set{g\in G | {}^g\alpha=\alpha} \leq G\]
+\[\Stb_G(\alpha)\coloneqq G_{\alpha}\coloneqq\Set{g\in G | {}^g\!\alpha=\alpha} \leq G\]
 und $\abs{G\colon G_{\alpha}} = \abs{\Orb_G(\alpha)}$; insbesondere ist $\abs{\Orb_G(\alpha)}\mid\abs{G}$ im Fall $\abs{G}<\infty$.
 \end{satz}
 
@@ -5159,13 +5169,13 @@ $G_\alpha$ heißt \highl{Gruppe!Stabilisator}{Stabilisator}\index{Stabilisator} v
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Wegen ${}^1\alpha=\alpha$ ist $1\in G_{\alpha}$.
-Für $g,h\in G_\alpha$ ist ${}^g\alpha=\alpha={}^h\alpha$.
-Daher ist ${}^{g^{-1}h}\alpha = g^{-1}({}^h\alpha) = {}^{g^{-1}}({}^g\alpha) = {}^{g^{-1}g}\alpha = {}^1\alpha = \alpha$, d.\,h. $g^{-1}h\in G_\alpha$.
+Wegen ${}^1\!\alpha=\alpha$ ist $1\in G_{\alpha}$.
+Für $g,h\in G_\alpha$ ist ${}^g\!\alpha=\alpha={}^h\!\alpha$.
+Daher ist ${}^{g^{-1}h}\!\alpha = g^{-1}({}^h\!\alpha) = {}^{g^{-1}}\!({}^g\!\alpha) = {}^{g^{-1}g}\!\alpha = {}^1\!\alpha = \alpha$, d.\,h. $g^{-1}h\in G_\alpha$.
 Also: $G_\alpha \leq G$.\\
 Für $g,h\in G$ gilt
-\[{}^g\alpha={}^h\alpha\Leftrightarrow\alpha={}^{g^{-1}h}\alpha\Leftrightarrow g^{-1}h\in G_\alpha\Leftrightarrow gG_\alpha=hG_\alpha.\]
-Daher ist die Abbildung $f\colon G/G_\alpha\mapsto\Orb_G(\alpha)$, $gG_\alpha\mapsto {}^g\alpha$ wohldefiniert und injektiv.
+\[{}^g\!\alpha={}^h\!\alpha\Leftrightarrow\alpha={}^{g^{-1}h}\!\alpha\Leftrightarrow g^{-1}h\in G_\alpha\Leftrightarrow gG_\alpha=hG_\alpha.\]
+Daher ist die Abbildung $f\colon G/G_\alpha\mapsto\Orb_G(\alpha)$, $gG_\alpha\mapsto {}^g\!\alpha$ wohldefiniert und injektiv.
 Sicher ist $f$ surjektiv, also auch bijektiv.\\
 Insbesondere ist $\abs{G\colon G_\alpha}=\abs{\Orb_G(\alpha)}$.
 \end{beweis}
@@ -5175,8 +5185,8 @@ Insbesondere ist $\abs{G\colon G_\alpha}=\abs{\Orb_G(\alpha)}$.
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:15.2}
 Jede Gruppe $G$ operiert auf sich selbst durch Konjugation:
-\[{}^gx = gxg^{-1} \qquad (g,x\in G),\]
-denn ${}^1x = 1x1^{-1} = x$ und ${}^g({}^hx) = {}^g(hxh^{-1}) = ghxh^{-1}g^{-1} = (gh)x(gh)^{-1} = {}^{gh}x \qquad (g,h,x\in G)$
+\[{}^g\!x = gxg^{-1} \qquad (g,x\in G),\]
+denn ${}^1\!x = 1x1^{-1} = x$ und ${}^g\!({}^h\!x) = {}^g\!(hxh^{-1}) = ghxh^{-1}g^{-1} = (gh)x(gh)^{-1} = {}^{gh}\!x \qquad (g,h,x\in G)$
 
 Die Bahn von $x\in G$ ist dabei die Konjugationsklasse $K_x = \{gxg^{-1}\colon g\in G\}$.
 Liegen $x,y\in G$ in der gleichen Konjugationsklasse [d.\,h. es existiert ein $g\in G$ mit $y=gxg^{-1}$], so heißen $x,y$ konjugiert in $G$.
@@ -5260,7 +5270,7 @@ Nach Übungsafgabe 31(ix) ist $P$ abelsch.
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:16.1}
 Jede Gruppe $G$ operiert auf der Menge der Untergruppen von $G$ durch:
-\[{}^gH\coloneqq gHg^{-1}\ (g\in G, H\leq G).\]
+\[{}^g\!H\coloneqq gHg^{-1}\ (g\in G, H\leq G).\]
 [$gHg^{-1}$ ist als Bild von $H$ unter einem inneren Automorphismus von $G$ tatsächlich wieder eine Untergruppe von $G$.]\\
 Die Bahn einer Untergruppe $H\leq G$ ist die Konjugationsklasse
 \[\mathfrak{k}_H\coloneqq\Set{gHg^{-1} | g\in G}\]
