--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -2296,34 +2296,57 @@ $F$ heißt \highl{Algebraischer Abschluss} von $K$ in $L$.
 
 % Beispiel 7.4
 \begin{bsp}\label{bsp:7.4}
-Bekanntlich ist $\sqrt{2} \in \R$ algebraisch über $\Q$ mit Minimalpolynom $X^2 - 2$.\\
-Daher: $[\Q(\sqrt{2})\colon \Q] = \deg{(X^2 - 2)} = 2$.\\
-Sogar: $\Q(\sqrt{2}) = (a + b\sqrt{2} \colon a, b \in \Q)$. Für $a + b\sqrt{2} \neq 0$ ist  dabei \[\frac{1}{a + b\sqrt{2}} = \frac{a - b\sqrt{2}}{(a + b\sqrt{2})(a - b\sqrt{2})} = \frac{a}{a^2 - 2b^2} - \frac{b}{a^2 - 2b^2}\sqrt{2} \in \Q(\sqrt{2}).\]
-Es ist $\sqrt{3} \notin \Q(\sqrt{2})$, denn sonst könnte man $\sqrt{3} = a + b\sqrt{2}$ mit $a, b \in \Q$ schreiben. Dann wäre aber $3 = a^2 + 2\sqrt{2}ab + 2b^2$.\\
-Koeffizientenvergleich \footnote{$1, \sqrt{2}$ sind linear unabhängig; $3 = 3
-  \cdot 1 + 0\sqrt{2}$} liefert: $ab = 0$, d.\,h. $a = 0$ oder $b = 0$.\\
-Im Fall $a = 0$ wäre $3 = 2b^2$, was nicht geht. Im Fall $b = 0$ wäre $3 = a^2$, was auch nicht geht.\\
-Daher ist $\sqrt{3}$ algebraisch über $\Q(\sqrt{2})$ mit Minimalpolynom $X^2 - 3$.\\
-Folglich: $[(\Q(\sqrt{2}))(\sqrt{3})\colon \Q(\sqrt{2})] = \deg{(X^2 - 3)} = 4$.\\
-Gradsatz: $[\Q(\sqrt{2}, \sqrt{3})\colon \Q] = 4$. Insbesondere $\sqrt{2} + \sqrt{3} \in \Q(\sqrt{2}, \sqrt{3})$ ist algebraisch über $\Q$. Was ist das Minimalpolynom von $\sqrt{2} + \sqrt{3}$ über $\Q$? $Q(\sqrt{2})$ hat Basis $1, \sqrt{2}$ über $\Q, \Q(\sqrt{2}, \sqrt{3})\colon \Q(\sqrt{2})$ hat Basis $1, \sqrt{3}$ über $\Q$. Gradsatz: $1, \sqrt{2}, \sqrt{3}, \sqrt{2} \cdot \sqrt{3} = \sqrt{6}\ \Q$-Basis von $\Q(\sqrt{2}, \sqrt{3})$.
-\[\left.\begin{array}{lcl}
-b^0 & = & 1\\
-b^1 & = & \sqrt{2} + \sqrt{3}\\
-b^2 & = & 5 + 2\sqrt{6}\\
-b^3 & = & 11\sqrt{2} + 9\sqrt{3}
-\end{array}\right\} \text{ linear unabhängig über }\Q\]
-\[\begin{array}{lcl}
-b^3 & = & 11\sqrt{2} + 9\sqrt{3} \\
-b^4 & = & 49 + 20\sqrt{6}
-\end{array}\]
-Wir suchen $a_0, a_1, a_2, a_3 \in \Q$ mit
-\[\begin{array}{lcl}
-0 & = & a_0 + a_1b + a_2b^2 + a_3b^3 + b^4\\
-& = & a_0 \cdot 1 + a_1 (\sqrt{2} + \sqrt{3}) + a_2 (5 + 2\sqrt{6}) + a_3 (11 + 9\sqrt{3}) + (49 + 20\sqrt{6})\\
-& = & \underbrace{(a_0 + 5 \cdot a_2 + 49)}_{= 0} + \underbrace{(a_1 + 11a_3)}_{= 0}\sqrt{2} + \underbrace{(a_1 + 9a_3)}_{= 0}\sqrt{3} + \underbrace{(2a_2 + 20)}_{= 0}\sqrt{6}
-\end{array}\]
-Also: $a_2 = -10, a_0 = 1, a_1 = a_3 = 0$. Daher: $\mu = 1 - 10X^2 + X^4$.\\
-Folglich: $[\Q(\sqrt{2} + \sqrt{3})\colon \Q] = 4$ und $\Q(\sqrt{2}, \sqrt{3}) = \Q(\sqrt{2} + \sqrt{3})$
+  Bekanntlich ist $\sqrt{2} \in \R$ algebraisch über $\Q$ mit
+  Minimalpolynom $X^2 - 2$. Daher folgt, $[\Q(\sqrt{2})\colon \Q] =
+  \deg{(X^2 - 2)} = 2$ und wir haben $\Q(\sqrt{2}) = \Set{a +
+    b\sqrt{2} | a, b \in \Q}$\todo{Warum waren hier runde
+    Klammern?}. Für $a + b\sqrt{2} \neq 0$ ist dabei
+  \[\frac{1}{a + b\sqrt{2}} = \frac{a - b\sqrt{2}}{(a + b\sqrt{2})(a -
+    b\sqrt{2})} = \frac{a}{a^2 - 2b^2}- \frac{b}{a^2 - 2b^2}\sqrt{2}
+  \in \Q(\sqrt{2}).\] Es ist $\sqrt{3} \notin \Q(\sqrt{2})$, denn
+  sonst könnte man $\sqrt{3} = a + b\sqrt{2}$ mit $a, b \in \Q$
+  schreiben. Dann wäre aber $3 = a^2 + 2\sqrt{2}ab + 2b^2$. Der
+  Koeffizientenvergleich\footnote{$1, \sqrt{2}$ sind linear
+    unabhängig; $3 = 3 \cdot 1 + 0\sqrt{2}$} liefert $ab = 0$,
+  d.\,h. $a = 0$ oder $b = 0$. Im Fall $a = 0$ wäre $3 = 2b^2$, was
+  nicht geht. Im Fall $b = 0$ wäre $3 = a^2$, was auch nicht
+  geht. Daher ist $\sqrt{3}$ algebraisch über $\Q(\sqrt{2})$ mit dem
+  Minimalpolynom $X^2 - 3$. Folglich: $[(\Q(\sqrt{2}))(\sqrt{3})\colon
+  \Q(\sqrt{2})] = \deg{(X^2 - 3)} = 4$.\todo{Ist der Ausdruck in der
+    ersten Klammer korrekt?}
+
+  Der Gradsatz (\autoref{satz:6.3}) liefert $[\Q(\sqrt{2},
+  \sqrt{3})\colon \Q] = 4$. Insbesondere ist $\sqrt{2} + \sqrt{3} \in
+  \Q(\sqrt{2}, \sqrt{3})$ algebraisch über $\Q$. Was ist das
+  Minimalpolynom von $\sqrt{2} + \sqrt{3}$ über $\Q$? Es hat
+  $\Q(\sqrt{2})$ die Basis $1$ und $\sqrt{2}$ über $\Q$ und
+  $\Q(\sqrt{2}, \sqrt{3})\colon \Q(\sqrt{2})$ hat die Basis $1,
+  \sqrt{3}$ über $\Q$. Nach dem Gradsatz ist $1, \sqrt{2}, \sqrt{3},
+  \sqrt{2} \cdot \sqrt{3} = \sqrt{6}$ eine $\Q$"=Basis von
+  $\Q(\sqrt{2}, \sqrt{3})$.
+  \[\left.\begin{array}{lcl}
+      b^0 & = & 1\\
+      b^1 & = & \sqrt{2} + \sqrt{3}\\
+      b^2 & = & 5 + 2\sqrt{6}\\
+      b^3 & = & 11\sqrt{2} + 9\sqrt{3}
+    \end{array}\right\} \text{ linear unabhängig über }\Q\]
+  
+  \begin{align*}
+    b^3 &= 11\sqrt{2} + 9\sqrt{3} \\
+    b^4 &= 49 + 20\sqrt{6}
+  \end{align*}
+  Wir suchen $a_0, a_1, a_2, a_3 \in \Q$ mit
+  \begin{align*}
+    0 &= a_0 + a_1b + a_2b^2 + a_3b^3 + b^4\\
+    &= a_0 \cdot 1 + a_1 (\sqrt{2} + \sqrt{3}) + a_2 (5 + 2\sqrt{6}) +
+    a_3 (11 + 9\sqrt{3}) + (49 + 20\sqrt{6})\\
+    &= \underbrace{(a_0 + 5 \cdot a_2 + 49)}_{= 0} + \underbrace{(a_1
+      + 11a_3)}_{= 0}\sqrt{2} + \underbrace{(a_1 + 9a_3)}_{=
+      0}\sqrt{3} + \underbrace{(2a_2 + 20)}_{= 0}\sqrt{6}
+  \end{align*}
+  Also ergibt sich $a_2 = -10, a_0 = 1, a_1 = a_3 = 0$. Daher ist $\mu
+  = 1 - 10X^2 + X^4$. Folglich: $[\Q(\sqrt{2} + \sqrt{3})\colon \Q] =
+  4$ und $\Q(\sqrt{2}, \sqrt{3}) = \Q(\sqrt{2} + \sqrt{3})$ 
 \end{bsp}
 
 % Satz 7.4
