Geschützte Leerzeichen in Bem. 7.3
git-svn-id: https://svn.lug-jena.de/uni-skripte@2428 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -2365,12 +2365,13 @@ $F$ heißt \highl{Algebraischer Abschluss} von $K$ in $L$.
   \end{beweis}
 \end{satz}
 
-
 % Bemerkung 7.3
 \begin{bem}\label{bem:7.3}
-Sei $K$ ein Körper.
-Nach Aufgabe 15 gilt im Polynomring $K[X]$: \[\ggt(X^m-1, X^n-1) = X^{\ggt(m, n)}-1.\] Mit Aufgabe 5 folgt daraus leicht: 
-\[\ggt(X^{q^a}-X, X^{q^b}-X) = X^{\ggt(a, b)}-X\quad(a, b, q \in \N)\]
+  Sei $K$ ein Körper.
+  Nach Aufgabe~15 gilt im Polynomring $K[X]$:
+  \[\ggt(X^m-1, X^n-1) = X^{\ggt(m, n)}-1.\]
+  Mit Aufgabe~5 folgt daraus leicht: 
+  \[\ggt(X^{q^a}-X, X^{q^b}-X) = X^{\ggt(a, b)}-X\quad(a, b, q \in \N)\]
 \end{bem}
 
 % Satz 7.5
