--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -2603,23 +2603,28 @@ Dabei gelten folgende Begriffe:
   k, \delta]$"=Code.
 \end{defi}
 
-\emph{Idee:} $C$ ist das Bild von $E \colon K^k \rightarrow K^n$. Ist $e \in E$ mit $2e < \delta$ so kann $C$ mindestens $e$ Fehler korrigieren. (Kreise von Radius $e$ um Codewörter schneiden sich nicht.)
-
+Die dahinterliegende Idee ist, dass $C$ das Bild  der
+Encode"=Abbildung $E \colon K^k \rightarrow K^n$ ist. Für $e \in E$
+mit $2e < \delta$ kann $C$ mindestens $e$~Fehler korrigieren. Denn die
+Kreise vom Radius~$e$ um die Codewörter schneiden sich nicht.
 Ein "`guter"' Code hat folgende Eigenschaften:
 \begin{itemize}
-	\item großer Minimalabstand ($\Rightarrow$ gute Korrekturmöglichkeit)
-	\item $\underbrace{\text{große Dimension}}_{\text{möglichst viele Codewörter in } C}$ ($\Rightarrow$ kostengünstig, effizient)
+\item großer Minimalabstand und damit eine gute Korrekturmöglichkeit
+\item große Dimension, damit möglichst viele Codewörter in $C$ und
+  damit kostengünstig sowie effizient.
 \end{itemize}
-Beide Ziele liegen in verschiedenen Richtungen (Kompromisse!).
+Beide Ziele liegen in verschiedenen Richtungen. Also müssen beim
+Design eines Codes Kompromisse geschlossen werden.
 
 % Bemerkung 8.1
 \begin{bem}\label{bem:8.1}
-  Viele \footnote{Vorteil dieser Konstruktion, zu Codes als
+  Viele\footnote{Vorteil dieser Konstruktion, zu Codes als
     Untervektorraum: man muss nur $\phi$ und $n$ speichern, keine
     Basis eines Untervektorraumes mit $k$~Elementen} in der Praxis
   auftretende Codes werden mit Hilfe von Polynomringen
   konstruiert. Dabei identifiziert man $K^n$ mit $K[X] / (X^n - 1)$
-  durch \[(a_0, a_1, \ldots, a_{n-1}) \leftrightarrow a_0 + a_1X +
+  durch
+  \[(a_0, a_1, \ldots, a_{n-1}) \leftrightarrow a_0 + a_1X +
   a_2X^2 + \dotsc + a_{n-1}X^{n-1} + (X^n - 1)\]
   Für jeden Teiler $\phi$ von $X^n - 1$ gilt: $(X^n - 1) \subseteq
   (\phi)$.
@@ -2632,32 +2637,36 @@ Beide Ziele liegen in verschiedenen Richtungen (Kompromisse!).
 
 % Satz 8.1
 \begin{satz}\label{satz:8.1}
-Sei $C \coloneqq (\phi) / (X^n - 1)$ wie oben und $l \coloneqq \deg\phi$, also $l \leq n$. Dann gilt: $\dim C = n - l$.
+  Sei $C \coloneqq (\phi) / (X^n - 1)$ wie oben und $l \coloneqq
+  \deg\phi$, also $l \leq n$. Dann gilt: $\dim C = n - l$.
+  \begin{beweis}
+    Schreibe $\phi = a_0 + a_1X + \dotsc + a_lX^l$ mit $a_0, \ldots, a_l
+    \in K$ und $a_l \neq 0$. Dann sind
+    \begin{align*}
+      \phi + (X^n - 1) &= a_0 + a_1X + \dotsc + a_lX^l + (X^n - 1)\\
+      X\phi + (X^n - 1)&= a_0X+ a_1X^2+\dotsc + a_lX^{l + 1} + (X^n - 1)\\
+      &\vdots \\
+      X^{n - l - 1}\phi + (X^n - 1) &= a_0X^{n - l - 1} +  \dotsc + a_lX^{n - 1}+ (X^n - 1)
+    \end{align*}
+    offenbar linear unabhängig in $C$. Also ist $\dim C \geq n - l$.
+    Wegen $\phi\mid X^n - 1$ existiert ein $\psi \in K[X]$ mit $X^n -
+    1 = \phi\psi$. Sei $\alpha \in (\phi)$, etwa $\alpha = \beta\phi$
+    mit $\beta \in K[X]$. Die Division mit Rest ergibt $\beta =
+    \kappa\psi + \rho$ mit $\deg\rho < \deg\psi = n - l$. Wir 
+    schreiben $\rho = r_0 + r_1X + \dotsc + r_{n - l - 1}X^{n - l -
+      1}\ (r_i \in K)$ und dann ist
+    \begin{align*}
+      \alpha + (X^n - 1) &= \beta\phi + (X^n - 1) =
+      \kappa\underbrace{\phi\psi}_{= (X^n - 1)} + \rho\phi + (X^n -
+      1)\\
+      &= \rho\phi + (X^n - 1) = r_0\phi + r_1X\phi + \dotsc + r_{n - l
+        - 1}X^{n - l - 1}\phi + (X^n - 1)
+    \end{align*}
+    Daher bilden $\phi + (X^n - 1), X\phi + (X^n - 1), \ldots, X^{n -
+      l - 1}\phi + (X^n - 1)$ eine Basis von $C$.
+\end{beweis}
 \end{satz}
 
-% Beweis
-\begin{beweis}
-Schreibe $\phi = a_0 + a_1X + \dotsc + a_lX^l\ (a_0, \ldots, a_l \in K, a_l \neq 0)$.\\
-Dann sind 
-\[\begin{array}{rcllllll}
-\phi + (X^n - 1) & = & a_0 & + & a_1X + & & \dotsc + a_lX^l & + (X^n - 1)\\
-X\phi + (X^n - 1) & = & & & a_0X + a_1X^2 + & & \dotsc + a_lX^{l + 1} & + (X^n - 1)\\
-& \vdots \\
-X^{n - l - 1}\phi + (X^n - 1) & = & & & & a_0X^{n - l - 1} + & \dotsc + a_lX^{n - 1} & + (X^n - 1)
-\end{array}\]
-offenbar linear unabhängig in $C$.\\
-Also: $\dim C \geq n - l$.\\
-Wegen $\phi\mid X^n - 1$ existiert ein $\psi \in K[X]$ mit $X^n - 1 = \phi\psi$. Sei $\alpha \in (\phi)$, etwas $\alpha = \beta\phi$ mit $\beta \in K[X]$.\\
-Division mit Rest: $\beta = \kappa\psi + \rho$ mit $\deg\rho < \deg\psi = n - l$.\\
-Schreibe $\rho = r_0 + r_1X + \dotsc + r_{n - l - 1}X^{n - l - 1}\ (r_i \in K)$.\\
-Dann: \[
-\begin{array}{lcl}
-\alpha + (X^n - 1) & = & \beta\phi + (X^n - 1) = \kappa\underbrace{\phi\psi}_{= (X^n - 1)} + \rho\phi + (X^n - 1)\\
-& = & \rho\phi + (X^n - 1)\\
-& = & r_0\phi + r_1X\phi + \dotsc + r_{n - l - 1}X^{n - l - 1}\phi + (X^n - 1)
-\end{array}\]
-Daher bilden $\phi + (X^n - 1), X\phi + (X^n - 1), \ldots, X^{n - l - 1}\phi + (X^n - 1)$ eine Basis von $C$.
-\end{beweis}
 
 % Beispiel 8.1
 \begin{bsp}\label{bsp:8.1}
