Erste Bemerkung im Kapitel 10 überarbeitet
· Verweis zum GruTheo-Skript mit Fußnote verbessert. Der Satz war
  merkwürdig.
· Im Mathemodus sieht eine Fußnote am Supskript komisch aus. Daher
  noch ein Wort eingebaut.
· Falsche \mapsto korrigiert, das müssen \rightarrow sein.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2440 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -2980,8 +2980,8 @@ Design eines Codes Kompromisse geschlossen werden.
 \begin{bem}\label{bem:10.1}
   Wir wiederholen ohne Beweis grundlegende Tatsachen über Gruppen aus
   den Grundvorlesungen. Die Beweise finden sich in den entsprechenden
-  Skripten oder im Skript zur
-  Gruppentheorie\footnote{\url{http://uni-skripte.lug-jena.de/skripte.html?id=kuelshammer-gruppentheorie}}.
+  Skripten\footnote{Beispielsweise in Gruppentheorie von Herrn
+    Kuelshammer: \url{http://uni-skripte.lug-jena.de/skripte.html?id=kuelshammer-gruppentheorie}}.
 
   Eine \highl{Gruppe} ist eine Menge $G$ mit einer
   \highl[Verknüpfung!assoziative]{assoziativen
@@ -2989,7 +2989,7 @@ Design eines Codes Kompromisse geschlossen werden.
   die (genau) ein \highl[Element!neutrales]{neutrales Element} $e =
   1$\footnote{$1a = a = a1$ für alle $a \in G$} enthält und zu jedem
   $g \in G$ (genau) ein \highl[Element!inverses]{inverses Element}
-  $g^{-1}$\footnote{$gg^{-1} = 1 = g^{-1}g$}.  Bekanntlich gilt,
+  $g^{-1}$ beinhaltet\footnote{$gg^{-1} = 1 = g^{-1}g$}.  Bekanntlich gilt,
   $1^{-1} = 1, (a^{-1})^{-1}=a$ und $(ab)^{-1} = b^{-1}a^{-1}$ für
   alle $a, b \in G$. Die Anzahl $\abs{G}$ der Elemente von $G$ heißt
   \highl{Ordnung} von $G$.  Ist $ab = ba$ für alle $a, b \in G$, so
@@ -2999,7 +2999,7 @@ Design eines Codes Kompromisse geschlossen werden.
   Bekannte Gruppen sind $(\C, +)$, $(\C\setminus\{0\},
   \cdot)$.  Für jede Menge $X$ ist 
   \begin{gather*}
-    \Sym(X) \coloneqq \Set{f \colon X \mapsto X |f \text{ bijektiv}}
+    \Sym(X) \coloneqq \Set{f \colon X \rightarrow X |f \text{ bijektiv}}
   \end{gather*}
   eine Gruppe bezüglich der Komposition von Abbildungen.  Man nennt
   $\Sym(X)$ die \highl[Gruppe!symmetrische]{symmetrische Gruppe} auf
@@ -3053,7 +3053,7 @@ Design eines Codes Kompromisse geschlossen werden.
   (\C \setminus \{0\}, \cdot)$.  Für jeden Körper $K$ und jeden
   $K$-Vektorraum $V$ ist
   \begin{gather*}
-    \GL(V) \coloneqq \Set{f \colon V \mapsto V |f \text{ linear und
+    \GL(V) \coloneqq \Set{f \colon V \rightarrow V |f \text{ linear und
         bijektiv}} \leq \Sym(V)
   \end{gather*}
   Die Gruppe $\GL(V)$ heißt \highl[Gruppe!Allgemeine
@@ -3061,7 +3061,7 @@ Design eines Codes Kompromisse geschlossen werden.
 
   Jede Gruppe $G$ besitzt die triviale Untergruppe $\{1_G\} =\colon
   1$. Die Untergruppen $H < G$ heißen \highl[Gruppe!Echte
-    Untergruppe]{Echte Untergruppen}\index{Untergruppe!echte}.
+    Untergruppe]{echte Untergruppen}\index{Untergruppe!echte}.
 
   Für jedes Element $a$ in einer Gruppe $G$ ist
   \[\langle a\rangle\ \coloneqq \Set{a^n | n \in \Z} \leq G\]
@@ -3075,7 +3075,7 @@ Design eines Codes Kompromisse geschlossen werden.
     \highl{Rechtsnebenklasse} von $a$ nach $H$. Man setzt
   \begin{align*}
     G / H &= \Set{aH | a \in G} &\text{ Menge aller Linksnebenklassen}\\
-    H \setminus G &= \Set{Ha \colon a \in G} &\text{Menge aller Rechtsnebenklassen}
+    H \setminus G &= \Set{Ha | a \in G} &\text{Menge aller Rechtsnebenklassen}
   \end{align*}
   Für $a \in G$ ist die Abbildung $H \rightarrow aH$ mit $h \mapsto
   ah$ bijektiv, insbesondere ist $\abs{aH} = \abs{H}$. Analog für
