Den Kern verbessert
Viele Vorkommen wurden nur als Ker geschrieben. Alles durch \ker
ersetzt. Überflüssige Definition von \Ker gelöscht und ebenfalls durch
\ker ersetzt.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2443 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -165,7 +165,6 @@
 \DeclareMathOperator{\Fix}{\mathcal{F}ix}
 \DeclareMathOperator{\Gal}{Gal}
 \DeclareMathOperator{\Hom}{Hom}
-\DeclareMathOperator{\Ker}{Ker}
 \DeclareMathOperator{\chr}{char}
 \DeclareMathOperator{\Sym}{Sym}
 \DeclareMathOperator{\Alt}{Alt}
@@ -3209,20 +3208,20 @@ Für jeden Homomorphismus von Gruppen $f\colon G\rightarrow  H$ gilt:
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:10.5}
 Für jeden Homomorphismus von Gruppen $f\colon G\rightarrow  H$ gilt nach \autoref{satz:10.3}
-\[Ker(f) = f^{-1}(\{1_H\}) = \{a \in G\colon f(a) = 1\} \unlhd G\]
-$Ker(f)$ heißt \highl{Kern} von $f$.
+\[\ker (f) = f^{-1}(\{1_H\}) = \{a \in G\colon f(a) = 1\} \unlhd G\]
+$\ker (f)$ heißt \highl{Kern} von $f$.
 Für $n \in \N$ und jeden Körper $K$ ist
-\[SL(n, K) \coloneqq \{A \in \GL(n, K)\colon det(A) = 1\} = Ker(det(A)) \unlhd \GL(n, K)\]
+\[SL(n, K) \coloneqq \{A \in \GL(n, K)\colon det(A) = 1\} = \ker (det(A)) \unlhd \GL(n, K)\]
 $SL(n, K)$ heißt \highl[Gruppe!spezielle lineare]{Spezielle lineare Gruppe (SL)} des Grades $n$ über $K$.
 
-Ein Homomorphismus von Gruppen $f\colon G\rightarrow  H$ ist genau dann injektiv, wenn $Ker(f) = \{1_G\}$ ist.
+Ein Homomorphismus von Gruppen $f\colon G\rightarrow  H$ ist genau dann injektiv, wenn $\ker (f) = \{1_G\}$ ist.
 
 Ein injektiver Homomorphismus heißt \highl{Monomorphismus}, ein surjektiver Homomorphismus \highl{Epimorphismus}, ein bijektiver Homomorphismus \highl{Isomorphismus}.
 
 Für jede Untergruppe $H$ einer Gruppe $G$ ist die Inklusionsabbildung $H\rightarrow  G$, $a\mapsto a$, ein Monomorphismus.
 Für $N \unlhd G$ ist $f\colon G\rightarrow  G/N$, $a\mapsto aN$, ein Epimorphismus, man nennt $f$ den \highl[Epimorphismus!kanonisch]{kanonischen Epimorphismus} von $G$ nach $G/N$.
-Offensichtlich ist $Ker(f) = N$.
-Daher ist eine Untergruppe $N$ einer Gruppe $G$ genau dann normal in $G$, wenn eine Gruppe $H$ und ein Homomorphismus $f\colon G\rightarrow  H$ mit $Ker(f) = N$ existiert.
+Offensichtlich ist $\ker (f) = N$.
+Daher ist eine Untergruppe $N$ einer Gruppe $G$ genau dann normal in $G$, wenn eine Gruppe $H$ und ein Homomorphismus $f\colon G\rightarrow  H$ mit $\ker (f) = N$ existiert.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -3230,7 +3229,7 @@ Daher ist eine Untergruppe $N$ einer Gruppe $G$ genau dann normal in $G$, wenn e
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:10.4}
 Für jeden Homomorphismus von Gruppen $f\colon G\rightarrow  H$ ist die Abbildung
-\[\{U\colon Ker(f) \leq U \leq G\} \rightarrow  \{V\colon V \leq \Bld(f)\}, \quad U\mapsto f(U),\]
+\[\{U\colon \ker (f) \leq U \leq G\} \rightarrow  \{V\colon V \leq \Bld(f)\}, \quad U\mapsto f(U),\]
 bijektiv mit Umkehrabbildung $V\mapsto f^{-1}(V)$
 \end{satz}
 
@@ -3238,10 +3237,10 @@ bijektiv mit Umkehrabbildung $V\mapsto f^{-1}(V)$
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Für $U \leq G$ mit $Ker(f) \leq U$ ist $f(U) \leq f(G) = \Bld(f)$, und für $V \leq \Bld(f)$, ist $f^{-1}(V) \leq G$ mit $Ker(f) = f^{-1}(\{1_H\}) \subseteq f^{-1}(V)$.\\
+Für $U \leq G$ mit $\ker (f) \leq U$ ist $f(U) \leq f(G) = \Bld(f)$, und für $V \leq \Bld(f)$, ist $f^{-1}(V) \leq G$ mit $\ker (f) = f^{-1}(\{1_H\}) \subseteq f^{-1}(V)$.\\
 Noch zu zeigen: $f^{-1}(f(U)) = U$ und $f(f^{-1}(V)) = V$.\\
 Für $x \in f^{-1}(f(U))$ ist $f(x) \in f(U)$, d.\,h. $f(x) = f(u)$ für ein $u \in U$.\\
-Dann: $f(x^{-1}u) = f(x^{-1})f(u) = 1$, d.\,h. $x^{-1}u \in Ker(f) \leq U$ und $x^{-1}, x \in U$.\\
+Dann: $f(x^{-1}u) = f(x^{-1})f(u) = 1$, d.\,h. $x^{-1}u \in \ker (f) \leq U$ und $x^{-1}, x \in U$.\\
 Also: $f^{-1}(f(U)) \subseteq U$.
 Sicher ist $U \subseteq f^{-1}(f(U))$.\\
 Sicher ist $f(f^{-1}(V)) \subseteq V$.\\
@@ -3281,9 +3280,9 @@ Daher gilt: $\GL(V) \cong \GL(n, K)$.
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}[Homomorphiesatz]\label{satz:10.5}
 Für jeden Homomorphismus von Gruppen $f\colon G\rightarrow  H$ ist
-\[F\colon G/Ker(f)\rightarrow  \Bld(f), \quad aKer(f)\mapsto f(a),\]
+\[F\colon G/\ker (f)\rightarrow  \Bld(f), \quad a\ker (f)\mapsto f(a),\]
 ein Isomorphismus.\\
-Insbesondere gilt: $G/Ker(f) \cong \Bld(f)$.
+Insbesondere gilt: $G/\ker (f) \cong \Bld(f)$.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -3320,8 +3319,8 @@ Für $n \in N$ und jedem Körper $K$ folgt aus dem Homomorphiesatz:
 	\item Für jede Gruppe $G$ ist die Abbildung \[F\colon G\rightarrow  \Aut(G), \quad x\mapsto f_x,\] ein Homomorphismus, denn für $x,y \in G$ gilt:
 	\[(f_x \circ f_y)(a) = x(yay^{-1})x^{-1} = (xy)a(xy)^{-1} = f_{xy}(a)\]
 	d.\,h. $F(x)F(y) = f_x \circ f_y = f_{xy} = F(xy)$.\\
-	Dabei gilt: \[\begin{array}{lcl}x \in Ker(F) \Leftrightarrow f_x = \id_G & \Leftrightarrow & xax^{-1} = a \quad \forall a \in G\\ & \Leftrightarrow & xa = ax \qquad \forall a \in G\end{array}\]
-	Daher gilt: $Ker(F) = \{x \in G\colon xa = ax \quad \forall a \in G\} =\colon  Z(G)$\\
+	Dabei gilt: \[\begin{array}{lcl}x \in \ker (F) \Leftrightarrow f_x = \id_G & \Leftrightarrow & xax^{-1} = a \quad \forall a \in G\\ & \Leftrightarrow & xa = ax \qquad \forall a \in G\end{array}\]
+	Daher gilt: $\ker (F) = \{x \in G\colon xa = ax \quad \forall a \in G\} =\colon  Z(G)$\\
 	Man nenn $Z(G)$ das \highl[Gruppe!Zentrum]{Zentrum}\index{Zentrum} von $G$.
 	Stets ist $Z(G) \unlhd G$.
 	
@@ -3370,7 +3369,7 @@ f(u_1)f(u_2) & = & (u_1N)(u_2N)\\
 & = & f(u_1u_2) \text{ für } u_1, u_2 \in U
 \end{array}\]
 Für $u \in U$ gilt dabei: $\begin{array}{lcl}f(u) = 1 & \Leftrightarrow & uN = N\\ & \Leftrightarrow & u \in N\end{array}$.
-Daher ist $Ker(f) = U \cap N$.\\
+Daher ist $\ker (f) = U \cap N$.\\
 Insbesondere ist $U \cap N \unlhd U$.\\
 Ferner ist $\Bld(f) = \{uN\colon u \in U\} = \{unN\colon u \in U, \quad n \in N\} = UN/N$.\\
 Jetzt folgt alles aus dem Homomorphiesatz (\autoref{satz:10.5}).
@@ -3394,11 +3393,11 @@ Nach \autoref{bem:10.7}(i) ist $M/N \unlhd G/N$.\\
 Seien $f\colon G\rightarrow  G/N$, $a\mapsto aN$, und $g\colon G/N\rightarrow  (G/N)/(M/N)$, $bN\mapsto (bN)(M/N)$ der kanonischen Epimorphismus.\\
 Dann ist $h \coloneqq g \circ f\colon G\rightarrow  (G/N)(M/N)$, $a\mapsto (aN)(M/N)$, ein Epimorphismus, und für $a\in G$ gilt:
 \[\begin{array}{lcl}
-a \in Ker(h) & \Leftrightarrow & (aN)(M/N) = 1\\
+a \in \ker (h) & \Leftrightarrow & (aN)(M/N) = 1\\
 & \Leftrightarrow & aN \in M/N\\
 & \Leftrightarrow & a \in M.
 \end{array}\]
-Daher ist $Ker(h) = M$, und aus dem Homomorphiesatz (\autoref{satz:10.5}) folgt die Behauptung.
+Daher ist $\ker (h) = M$, und aus dem Homomorphiesatz (\autoref{satz:10.5}) folgt die Behauptung.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
@@ -3445,7 +3444,7 @@ Eine Gruppe $G$ heißt \highl[Gruppe!zyklische]{zyklisch}, falls ein $a \in G$ mi
 Gegebenenfalls ist die Abbildung
 \[f\colon \Z\rightarrow  G, \quad k\mapsto a^k,\]
 ein Epimorphismus von Gruppen.
-Nach dem obigen Satz ist $Ker(f) = n\Z$ für ein $n \in \N_0$.
+Nach dem obigen Satz ist $\ker (f) = n\Z$ für ein $n \in \N_0$.
 Aus dem Homomorphiesatz (\autoref{satz:10.5}) folgt also:
 \[G \cong \ZmZ{n}.\]
 Daher ist jede zyklische Gruppe $G$ zu $\ZmZ{n}$ für ein $n \in N_0$ isomorph.\\
@@ -3851,7 +3850,7 @@ Wir berechnen die entsprechenden Fixkörper. Dazu gibt es (mindestens) 2 Methoden
   \begin{align*}
     \Fix{(H)} &= \Set{x \in L | \sigma(x) = x \quad \forall\sigma \in H}\\
     &= \Set{x \in L | (\sigma - \id_L)(x) = 0}\\
-    &= \bigcap_{\sigma \in H}\Ker(\sigma - \id_L)
+    &= \bigcap_{\sigma \in H}\ker(\sigma - \id_L)
   \end{align*}
   Dabei ist jedes $\sigma - \id_L$ eine $K$-lineare Abbildung.
 	Damit ist die Berechnung von $\Fix{(H)}$ auf die Lösung eines homogenen linearen Gleichungssystems zurückgeführt.
@@ -4703,7 +4702,7 @@ Dann gilt:
 Für $n\in\N$ ist nach Übungsaufgabe 34 die Abbildung $\epsilon\colon\Sym(n)\rightarrow (\{\pm 1\}, \cdot)$, $g\mapsto\prod_{1\leq i<j\leq n}\frac{g(j)-g(i)}{j-i}$, ein Homomorphismus.
 Für $g\in\Sym(n)$ nennt man $\epsilon(g)$ das Vorzeichen von $g$.\\
 Ist $\epsilon(g) = 1$, so heißt $g$ gerade, sonst ungerade.\\
-Dann ist \[\Alt(n)\coloneqq\Ker(\epsilon) = \Set{g\in\Sym(n) | g \text{ gerade}}\unlhd\Sym(n).\]
+Dann ist \[\Alt(n)\coloneqq\ker(\epsilon) = \Set{g\in\Sym(n) | g \text{ gerade}}\unlhd\Sym(n).\]
 $\Alt(n)$ heißt \highl{Gruppe!alternierend}{alternierende Gruppe} des Grades $n$.
 
 Ist $n>1$ und $t\in\Sym(n)$ derart, dass $t$ die Zahlen $1$ und $2$ vertauscht und $3,\ldots,n$ festhält, so ist $\epsilon(t) = -1$, insbesondere ist $\epsilon$ surjektiv.
@@ -5252,13 +5251,13 @@ Für jede Menge $\Omega$ operiert jede Untergruppe $G$ von $\Sym(\Omega)$ auf $\O
 \begin{defi}\label{defi:15.2}
 Sei $\Omega$ eine $G$-Menge und $\tau\colon G\rightarrow \Sym(\Omega)$ der entsprechende Homomorphismus.
 Dann heißt:
-\[\Ker(\tau) = \Set{g\in G | \tau_g=\id_{\Omega}} = \Set{g\in G | {}^g\!\alpha=\alpha  \qquad  \text{ für alle } \alpha\in\Omega}\]
+\[\ker(\tau) = \Set{g\in G | \tau_g=\id_{\Omega}} = \Set{g\in G | {}^g\!\alpha=\alpha  \qquad  \text{ für alle } \alpha\in\Omega}\]
 der \highl{Gruppe!Operation!Kern}{Kern} der Operation.
 
-Ist $\Ker(\tau) = G$ [d.\,h. ${}^g\!\alpha=\alpha$ für alle $g\in G$, $x\in\Omega$], so nennt man die Operation \highl{Gruppe!Operation!trivial}{trivial}.
+Ist $\ker(\tau) = G$ [d.\,h. ${}^g\!\alpha=\alpha$ für alle $g\in G$, $x\in\Omega$], so nennt man die Operation \highl{Gruppe!Operation!trivial}{trivial}.
 Man sagt: "`$G$ operiert trivial auf $\Omega$"'.
 
-Ist dagegen $\Ker(\tau) = \{1\}$ [d.\,h. $\tau$ ist injektiv], so nennt man die Operation \highl{Gruppe!Operation!treu}{treu}.
+Ist dagegen $\ker(\tau) = \{1\}$ [d.\,h. $\tau$ ist injektiv], so nennt man die Operation \highl{Gruppe!Operation!treu}{treu}.
 Gegebenenfalls ist $G \cong \tau(G) \leq \Sym(\Omega)$.
 \end{defi}
 
@@ -5688,7 +5687,7 @@ Sei $G$ Gruppe mit $\abs{G}<60$.
 Nach den früheren Erkenntnissen bleiben nur die Fälle $\abs{G}\in\{24,40,48,54,56\}$ übrig.
 \begin{enumerate}[(i)]
 	\item Sei $\abs{G}=24$ und $P\in\Syl_2(G)$, d.\,h. $\abs{P}=8$ und $\abs{G\colon P}=3$.\\
-	Übungsaufgabe 51 liefert einen Homomorphismus $\rho\colon G\rightarrow \Sym(G/P)\cong\Sym(3)$ und $K\coloneqq\Ker(\rho)\leq P$, also $\abs{K}\mid\abs{P}=8$.
+	Übungsaufgabe 51 liefert einen Homomorphismus $\rho\colon G\rightarrow \Sym(G/P)\cong\Sym(3)$ und $K\coloneqq\ker(\rho)\leq P$, also $\abs{K}\mid\abs{P}=8$.
 	Daher ist $K$ auflösbar.
 	Wegen $\abs{G/K}=\abs{\rho(G)}\mid\abs{\Sym(3)}=6$ ist $G/K$ auflösbar.\\
 	Also: $G$ auflösbar.
